Implement upload image service to s3
