# docs/swagger.json
@@ -52,6 +52,38 @@
                 }
             }
         },
+        "/api/v1/post/upload": {
+            "post": {
+                "description": "Upload an image for the post",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Post"
+                ],
+                "summary": "Upload image",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "Image file to upload",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/types.BaseResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/register": {
             "post": {
                 "description": "Register with credentials",
@@ -67,7 +99,7 @@
                 "summary": "Register a new account",
                 "parameters": [
                     {
-                        "description": "Payload of regiseter user account",
+                        "description": "Payload of register user account",
                         "name": "request",
                         "in": "body",
                         "required": true,
@@ -88,6 +120,15 @@
         }
     },
     "definitions": {
+        "types.BaseResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "metadata": {}
+            }
+        },
         "types.ErrorEmailAlreadyExists": {
             "type": "object",
             "properties": {
